Basic UI  interaction

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
     </br>
     <h1>Upload the files:</h1>
     <form action="/process_plantuml" method="post" enctype="multipart/form-data">
-        <input type="file" name="files" multiple>
+        <input type="file" name="files" multiple accept=".txt"><!-- , .png"> -->
         <input type="submit" value="Upload">
     </form>
 
