--- a/templates/index.html
+++ b/templates/index.html
@@ -4,17 +4,18 @@
     <title>FastAPI Input</title>
 </head>
 <body>
-    <h1>Enter the RULE:</h1>
+    <!--<h1>Enter the RULE:</h1>
     <form action="/" method="post">
         <input type="text" name="input_text">
         <input type="submit" value="Submit">
-    </form>
+    </form>-->
     </br>
-    <h1>Upload the files:</h1>
+    <h1>Upload the UML files:</h1>
     <form action="/process_plantuml" method="post" enctype="multipart/form-data">
         <input type="file" name="files" multiple accept=".txt"><!-- , .png"> -->
         <input type="submit" value="Upload">
     </form>
+
 
 
 </body>
